# PAC-Bench

./: README.md  requirements.txt
evaluation/: main.py
evaluation/configs/: __init__.py  settings.py
evaluation/src/: __init__.py
evaluation/utils/: __init__.py  copy_input_jsons_to_result.py  file_converter.py  file_io.py  keyword_searcher.py  (+1 more)
scenario_generate/: .env.sample  1_run_scenario.py  2_run_requirements.py  3_run_memory.py  4_run_constraint.py  pyproject.toml
scenario_generate/data/domains/: domain.json
scenario_generate/src/: __init__.py
scenario_generate/src/config/: __init__.py  settings.py
scenario_generate/src/core/: __init__.py
scenario_generate/src/core/interfaces/: __init__.py  llm_client.py  parser.py
scenario_generate/src/generators/: __init__.py  stage1_scenario_generator.py  stage2_requirements_generator.py  stage3_memory_generator.py  stage4_constraint_generator.py
scenario_generate/src/generators/parsers/: __init__.py  base_parser.py  constraint_parser.py  memory_parser.py  requirements_parser.py  scenario_parser.py
scenario_generate/src/llm/: __init__.py  anthropic_client.py  factory.py  openai_client.py
scenario_generate/src/prompts/: __init__.py  prompt_loader.py
scenario_generate/src/prompts/templates/: 1_scenario_generation_prompt.txt  2_requirements_generation_prompt.txt  3_memory_generation_prompt.txt  4_constraint_generation_prompt.txt
scenario_generate/src/utils/: __init__.py  file_io.py  logging.py  parallel.py
scenario_simulator/: docker-compose.yml  docker-compose_postgres.txt  main.py  turns.py
(+155 files in other folders)
